<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">What\'s On Limerick</string>
    <string name="logo">What\'s On Limerick</string>
    <string name="action_settings">Settings</string>
    <string name="allev">All Events</string>
    <string name="mnth">This Month</string>
	<string name="week">This Week</string>
	<string name="home">Home</string>
	<string name="login">Login</string>
	<string name="exit">Exit</string>
	<string name="fb">fb</string>
	<string name="username">Username: </string>
	<string name="password">Password: </string>
	<string name="log">LOGIN</string>
	<string name="signup">Sign Up</string>
	<string name="contDesc"> </string>
	<string name="retype">Retype: </string>
	<string name="gallery">Photos</string>
	<string name="upload">Upload</string>
	<string name="map">Map</string>
	<string name="eventDesc">Description: \n</string>
	<string name="selectImage">Select Photo</string>
</resources>
