<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FAFAFA" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:background="#E1E1E1"
        android:orientation="horizontal"
        android:padding="5dp" >

        <Button
            android:id="@+id/login_img"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_action_person"
            android:text="@string/login"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lce"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:padding="5dp" >

        <Button
            android:id="@+id/thisWeek"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#767676"
            android:text="@string/week"
            android:textColor="#E4E4E4"
            android:textSize="15sp" />

        <Button
            android:id="@+id/thisMonth"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:background="#767676"
            android:text="@string/mnth"
            android:textColor="#E4E4E4"
            android:textSize="15sp" />

        <Button
            android:id="@+id/allEvents"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:background="#767676"
            android:text="@string/allev"
            android:textColor="#E4E4E4"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/lce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="123dp"
        android:text="@string/logo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#2D2D2D" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/linearLayout1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/logolc"
            android:contentDescription="@string/contDesc" />

</RelativeLayout>