<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="#FAFAFA">

    <Button
        android:id="@+id/select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/selectImage" />

    <Button
        android:id="@+id/upload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp"
        android:text="@string/upload" />

    <TextView
        android:id="@+id/file_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/upload_button"
        android:layout_alignRight="@+id/upload_button" 
        android:layout_below="@+id/upload_button"
        android:layout_marginTop="41dp"
        android:text="@string/contDesc"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>